--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,10 @@
-body{
-    background-color: aquamarine;
+body {
+  background-color: aquamarine;
 }
-h1{
-    color: azure;
-    font-family: 'Playfair Display', serif;
+h1 {
+  color: azure;
+  font-family: "Playfair Display", serif;
 }
-p{
-    font-family: 'Poppins', sans-serif;
+p {
+  font-family: "Poppins", sans-serif;
 }
