--- a/styles/style.css
+++ b/styles/style.css
@@ -1,37 +1,40 @@
+:root {
+  --primary-color: #6c63ff;
+  --secondary-color: #f9f7fe;
+  --heading-font-family: "Playfair Display", serif;
+  --default-font-family: "Poppins", sans-serif;
+}
+
 .hero-header {
   text-align: center;
-  background-color: #f9f7fe;
-  height: 600px;
-  padding: 100px 160px;
+  background-color: var(--secondary-color);
+  padding: 160px 20px;
 }
 
 .hero-header h1 {
-  font-family: "Playfair Display", serif;
+  font-family: var(--heading-font-family);
   font-weight: 700;
   font-size: 96px;
-  line-height: 127px;
 }
 
 .hero-header h2 {
-  font-family: "Poppins", sans-serif;
+  font-family: var(--default-font-family);
   font-weight: bold;
   font-style: normal;
   font-size: 36px;
-  line-height: 54px;
 }
 
 .hero-header p {
-  font-family: "Poppins", sans-serif;
+  font-family: var(--default-font-family);
   font-weight: 400;
   font-size: 24px;
-  line-height: 36px;
 }
 .btn-hero {
-  background: #6c63ff;
+  background: var(--primary-color);
   border-radius: 4px;
   padding: 16px 46px;
   text-decoration: none;
   color: #ffffff;
-  font-family: "Poppins", sans-serif;
+  font-family: var(--default-font-family);
   margin: 20px auto;
 }
