--- a/styles/style.css
+++ b/styles/style.css
@@ -7,15 +7,18 @@
 
 h1 {
   font-size: 96px;
+  line-height: 1.5;
 }
 
 h2 {
   font-size: 64px;
+  font-family: var(--heading-font-family);
 }
 
 p {
   font-size: 16px;
   font-style: normal;
+  font-family: var(--default-font-family);
 }
 
 .hero-header {
@@ -50,4 +53,36 @@ p {
   color: #ffffff;
   font-family: var(--default-font-family);
   margin: 20px auto;
+}
+
+.project-btn {
+  font-family: var(--default-font-family);
+  color: var(--primary-color);
+  background-color: var(--secondary-color);
+  border: 1px solid var(--primary-color);
+  border-radius: 4px;
+  padding: 18px 30px;
+}
+
+.project-discribtion {
+  padding: 80px 60px;
+}
+.project-discribtion p {
+  color: rgba(39, 33, 66, 0.7);
+}
+
+@media (max-width: 960px) {
+  h1 {
+    font-size: 60px !important;
+  }
+  h2 {
+    font-size: 44px;
+  }
+  .hero-header {
+    padding: 80px 20px;
+  }
+  .project-discribtion {
+    text-align: center;
+    padding: 20px;
+  }
 }
