--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,7 @@
 h1 {
   font-size: 96px;
   line-height: 1.5;
+  font-family: var(--heading-font-famil);
 }
 
 h2 {
@@ -75,6 +76,26 @@ p {
 }
 .project-discribtion p {
   color: rgba(39, 33, 66, 0.7);
+}
+.about-page {
+  padding: 120px 20px;
+}
+.about-page h1 {
+  font-size: 64px;
+}
+
+.about-page h3 {
+  font-family: var(--default-font-family);
+  font-size: 18px;
+  line-height: 27px;
+}
+.about-page p {
+  font-size: 16px;
+}
+.my-pic {
+  border-radius: 4px;
+  height: 560px;
+  margin-left: 30px;
 }
 
 @media (max-width: 960px) {
