--- a/styles/style.css
+++ b/styles/style.css
@@ -95,7 +95,7 @@ p {
 .my-pic {
   border-radius: 4px;
   height: 560px;
-  margin-left: 30px;
+  margin-left: auto;
 }
 
 @media (max-width: 960px) {
@@ -111,5 +111,9 @@ p {
   .project-discribtion {
     text-align: center;
     padding: 20px;
+  }
+  .about-page {
+    text-align: center;
+    padding: 60px 20px;
   }
 }
