--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@
 h1 {
   font-size: 96px;
   line-height: 1.5;
-  font-family: var(--heading-font-famil);
+  font-family: var(--heading-font-family);
 }
 
 h2 {
@@ -20,6 +20,30 @@ p {
   font-size: 16px;
   font-style: normal;
   font-family: var(--default-font-family);
+}
+
+.content {
+  padding: 120px 30px;
+}
+.content img {
+  border-radius: 20px;
+  padding: 10px;
+}
+.content h1 {
+  font-size: 64px;
+  font-family: var(--heading-font-family);
+}
+
+.content h3 {
+  font-size: 24px;
+  line-height: 1.5;
+  margin: 20px 0 0;
+  font-family: var(--default-font-family);
+  font-weight: bold;
+}
+
+.content p {
+  font-size: 14px;
 }
 
 .hero-header {
@@ -82,6 +106,7 @@ p {
 }
 .about-page h1 {
   font-size: 64px;
+  font-family: var(--heading-font-family);
 }
 
 .about-page h3 {
