--- a/styles/style.css
+++ b/styles/style.css
@@ -152,6 +152,45 @@ nav li.active a {
   height: 560px;
   margin-left: auto;
 }
+footer {
+  margin: 60px 0;
+}
+
+footer .email-link a {
+  text-decoration: none;
+  color: black;
+  font-family: var(--default-font-family);
+  font-size: 24px;
+}
+footer .email-link a:hover {
+  color: var(--primary-color);
+}
+footer .social-links i {
+  color: var(--primary-color);
+  background-color: var(--secondary-color);
+  font-size: 18px;
+  border-radius: 50%;
+  padding: 11px 14px;
+  margin: 0 20px;
+}
+footer .social-links i:hover {
+  color: white;
+  background-color: var(--primary-color);
+}
+
+footer .contact-box {
+  background-color: var(--secondary-color);
+  padding: 30px 120px;
+  border-radius: 10px;
+  margin: 0 50px;
+}
+footer h4 {
+  font-size: 46px;
+  font-family: var(--heading-font-family);
+}
+footer .btn-hero {
+  font-size: 18px;
+}
 
 @media (max-width: 960px) {
   h1 {
@@ -159,6 +198,9 @@ nav li.active a {
   }
   h2 {
     font-size: 44px;
+  }
+  h4 {
+    font-size: 18px;
   }
   .hero-header {
     padding: 80px 20px;
