--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,10 @@ h2 {
   font-size: 64px;
   font-family: var(--heading-font-family);
 }
+h3 {
+  font-size: 46px;
+  font-family: var(--heading-font-family);
+}
 
 p {
   font-size: 16px;
@@ -132,7 +136,7 @@ nav li.active a {
   color: rgba(39, 33, 66, 0.7);
 }
 .about-page {
-  padding: 120px 20px;
+  padding: 100px 20px;
 }
 .about-page h1 {
   font-size: 64px;
@@ -150,7 +154,7 @@ nav li.active a {
 .my-pic {
   border-radius: 4px;
   height: 560px;
-  margin-left: auto;
+  margin-left: 60px;
 }
 footer {
   margin: 60px 0;
@@ -191,6 +195,26 @@ footer h4 {
 footer .btn-hero {
   font-size: 18px;
 }
+.weather {
+  position: relative;
+  top: 60px;
+}
+.pets h3 {
+  text-align: center;
+  font-size: 46px;
+  font-family: var(--heading-font-family);
+  margin-top: 60px;
+  color: black;
+}
+.pets .cat-pic {
+  border-radius: 50%;
+  width: 200px;
+  margin: 20px;
+}
+.pets p {
+  text-align: center;
+  margin-top: 20px;
+}
 
 @media (max-width: 960px) {
   h1 {
@@ -212,5 +236,8 @@ footer .btn-hero {
   .about-page {
     text-align: center;
     padding: 60px 20px;
+  }
+  .my-pic {
+    margin: 0 auto;
   }
 }
