--- a/styles/style.css
+++ b/styles/style.css
@@ -215,6 +215,104 @@ footer .btn-hero {
   text-align: center;
   margin-top: 20px;
 }
+.wrapper {
+  display: block;
+  min-height: 100vh;
+  align-items: center;
+  justify-content: center;
+  padding: 0 10px;
+  width: 720px;
+  background: #f9f7fe;
+  border-radius: 5px;
+}
+.wrapper header {
+  font-size: 22px;
+  font-weight: 600;
+  padding: 20px 30px;
+  border-bottom: 1px solid #6c63ff;
+}
+.wrapper form {
+  margin: 35px 30px;
+}
+
+form .dbl-field {
+  display: flex;
+  align-items: center;
+  margin-bottom: 25px;
+  justify-content: space-between;
+}
+
+.dbl-field .field {
+  height: 50px;
+  position: relative;
+  width: calc(100% / 2 - 13px);
+}
+
+form .field input,
+form .message textarea {
+  height: 100%;
+  width:  100%;
+  outline: none;
+  padding: 0 18px 0 48px;
+  font-size: 16px;
+  border-radius: 5px;
+  border: 1px solid #bfbfbf
+}
+
+form .field input::placeholder,
+form .message textarea::placeholder{
+  color: #bfbfbf;
+}
+
+form .field input:focus,
+form .message textarea:focus{
+  border: 2px solid #6c63ff;
+} 
+form .field input:focus ~ i {
+  color: #6c63ff;
+}
+
+.wrapper form i {
+  position: absolute;
+  left: 18px;
+  top: 50%;
+  font-size: 17px;
+  pointer-events: none;
+  transform: translateY(-50%);
+  color: #bfbfbf;
+}
+form .message {
+  position: relative;
+}
+form .message i {
+  top: 30px;
+  font-size: 20px;
+}
+form .message textarea {
+  min-width: 100%;
+  max-width: 100%;
+  min-height: 120px;
+  max-height: 300px;
+  padding: 15px 20px 0 48px;
+}
+form .button-area {
+  margin: 25px 0;
+  display: flex;
+  align-items: center;
+}
+.button-area button {
+  font-family: var(--default-font-family);
+  color: var(--secondary-color);
+  background-color: var(--primary-color);
+  border: 1px solid var(--primary-color);
+  border-radius: 4px;
+  padding: 18px 30px;
+}
+.button-area span {
+  color: #6c63ff;
+  margin-left: 30px;
+  display: none;
+}
 
 @media (max-width: 960px) {
   h1 {
@@ -243,4 +341,31 @@ footer .btn-hero {
   nav a {
     font-size: 14px;
   }
+}
+@media(max-width: 600px){
+  .wrapper {
+    max-width: 100%;
+  }
+  .wrapper header {
+    text-align: center;
+  }
+  form .dbl-field,
+  form .button-area {
+    flex-direction: column;
+    margin-bottom: 0px;
+  }
+  .dbl-field .field {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  .button-area button {
+    width: 100%;
+  }
+.button-area span {
+  text-align: center;
+  margin: 20px 0;
+}
+form .message textarea {
+  resize: none;
+}
 }
